# scms-backend

./: .dockerignore  .env.docker  .env.example  .env.production.ip  .gitignore  ADMISSION_FRONTEND_GUIDE.md  ADMISSION_QUICK_FIX.md  ADMISSION_SESSION_VS_ACADEMIC_YEAR.md  ADMISSION_SYSTEM_COMPLETE.md  ADMISSION_SYSTEM_DESIGN.md  ADMISSION_SYSTEM_SUMMARY.md  ANNOUNCEMENT_MESSAGING_SYSTEM.md  API_TESTING_GUIDE.md  ATTENDANCE_API_ENDPOINTS.md  CELERY_SETUP_GUIDE.md  CLASSROOM_SYNC_COMPLETE.md  COMPLETE_API_DOCUMENTATION.md  COMPLETE_SYSTEM_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCKER_GUIDE.md  Dockerfile  EMAIL_INVITATION_SYSTEM.md  EXAMINATION_API_ENDPOINTS.md  FEE_REMINDERS_GUIDE.md  FINAL_SYSTEM_STATUS.md  FINANCE_API_ENDPOINTS.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_QUICK_START.sh  FRONTEND_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  MAILPIT_SETUP_COMPLETE.md  NUXT_INTEGRATION.md  ONBOARDING_ARCHITECTURE.md  ONBOARDING_IMPLEMENTATION_SUMMARY.md  ONBOARDING_QUICK_START.md  PHASE_1_1_RESULT_COMPUTATION_SUMMARY.md  PHASE_1_2_REPORT_CARD_GENERATOR_SUMMARY.md  PHASE_1_3_TEACHER_PERMISSIONS_SUMMARY.md  (+40 more)
academic/: admin.py  models.py  permissions.py  serializers.py  serializers_admission.py  tasks.py  teacher_views.py  validators.py  views.py  views_admission_admin.py  views_admission_public.py  views_class_advancement.py  views_promotions.py  views_student_portal.py
administration/: admin.py  common_objs.py  models.py  permissions.py  serializers.py  views.py
api/: celery_views.py  exceptions.py  middleware.py
assignments/: admin.py  (+6 more)
(+182 files in other folders)
